Change title. Fixed letter spacing for timer.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,6 +47,7 @@ $text-danger-font-size: 18px;
   line-height: $text-huge-line-height;
   height: $text-huge-line-height;
   font-weight: 300;
+  letter-spacing: 30px;
 }
 
 .logo {
